--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
 									<p class="pr-s">Please provide your name, email address, and phone number.</p>
 									
 									<div class="tx-inp-d">
-										<label class="" for="user-name">Name</label>
+										<label class="tx-inp-lbl-s clr-prim-1" for="user-name">Name</label>
 										<p class="tx-inp-er-s">This field is required</p>
 										<input type="text" id="user-name" placeholder="e.g. Stephen King" class="tx-inp-s">
 									</div>
 
 									<div class="tx-inp-d">
-										<label class="" for="email-eddress">Email Address</label>
+										<label class="tx-inp-lbl-s clr-prim-1" for="email-eddress">Email Address</label>
 										<input type="text" id="email-eddress" placeholder="e.g. stephenking@lorem.com" class="tx-inp-s">
 									</div>
 
 									<div class="tx-inp-d">
-										<label class="" for="phone-number">Phone Number</label>
+										<label class="tx-inp-lbl-s clr-prim-1" for="phone-number">Phone Number</label>
 										<input type="text" id="phone-number" placeholder="e.g. +1 234 567 890" class="tx-inp-s">
 									</div>
 			
@@ -115,8 +115,8 @@
 							</div>
 						</div>
 
-						<!-- step 1 -->
-						<div class="field-set-main step-1-fields">
+						<!-- step 2 -->
+						<!-- <div class="field-set-main step-1-fields">
 							<div class="fields-sets">
 								<div class="fields">
 									todo
@@ -126,7 +126,33 @@
 							<div class="back-and-next place-end">
 								todo
 							</div>
-						</div>
+						</div> -->
+
+						<!-- step 3 -->
+						<!-- <div class="field-set-main step-1-fields">
+							<div class="fields-sets">
+								<div class="fields">
+									todo
+								</div>
+							</div>
+
+							<div class="back-and-next place-end">
+								todo
+							</div>
+						</div> -->
+
+						<!-- step 4 -->
+						<!-- <div class="field-set-main step-1-fields">
+							<div class="fields-sets">
+								<div class="fields">
+									todo
+								</div>
+							</div>
+
+							<div class="back-and-next place-end">
+								todo
+							</div>
+						</div> -->
 
 					</div>
 				</section>
