--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 					<div class="form-fields">
 						<!-- step 1 -->
-						<div class="field-set-main step-1-fields">
+						<!-- <div class="field-set-main step-1-fields">
 							<div class="fields-sets">
 								<div class="fields">
 									<h1 class="hd-s">Personal info</h1>
@@ -113,33 +113,81 @@
 							<div class="back-and-next place-end">
 								<button class="btn nex">Next Step</button>
 							</div>
-						</div>
+						</div> -->
 
 						<!-- step 2 -->
 						<!-- <div class="field-set-main step-1-fields">
 							<div class="fields-sets">
 								<div class="fields">
-									todo
+									<h1 class="hd-s">Select your plan</h1>
+									<p class="pr-s">You have the option of monthly or yearly billing.</p>
+
+									<div class="step-2-options">
+										<label for="arcade" class="step-2-option">
+											<input type="radio" name="select-plan-option" id="arcade" class="sr-only">
+											<img src="./static/images/icon-arcade.svg" class="step-2-option-img" alt="">
+											<div>
+												<p class="txt-mdm clr-prim-1">Arcade</p>
+												<p class="txt-nrml clr-neut-1">$9/mo</p>
+												<p class="txt-nrml clr-prim-1">2 months free</p>
+											</div>
+										</label>
+		
+										<label for="advanced" class="step-2-option">
+											<input type="radio" name="select-plan-option" id="advanced" class="sr-only">
+											<img src="./static/images/icon-advanced.svg" class="step-2-option-img" alt="">
+											<div>
+												<p class="txt-mdm clr-prim-1">Advanced</p>
+												<p class="txt-nrml clr-neut-1">$12/mo</p>
+												<p class="txt-nrml clr-prim-1">2 months free</p>
+											</div>
+										</label>
+		
+										<label for="pro" class="step-2-option">
+											<input type="radio" name="select-plan-option" id="pro" class="sr-only">
+											<img src="./static/images/icon-pro.svg" class="step-2-option-img" alt="">
+											<div>
+												<p class="txt-mdm clr-prim-1">pro</p>
+												<p class="txt-nrml clr-neut-1">$15/mo</p>
+												<p class="txt-nrml clr-prim-1">2 months free</p>
+											</div>
+										</label>
+									</div>
+
+									<div class="monthly-and-year">
+										<label for="monthly">
+											<input type="radio" name="select-plan-option" id="monthly" class="sr-only">
+											<span>Monthly</span>
+										</label>
+										<span class="monthly-and-year-icon"></span>
+										<label for="yearly">
+											<input type="radio" name="select-plan-option" id="yearly" class="sr-only">
+											<span>Yearly</span>
+										</label>
+									</div>
+
 								</div>
 							</div>
 
-							<div class="back-and-next place-end">
-								todo
+							<div class="back-and-next place-spaced">
+								<button class="btn gob">Go back</button>
+								<button class="btn nex">Next step</button>
 							</div>
 						</div> -->
 
 						<!-- step 3 -->
-						<!-- <div class="field-set-main step-1-fields">
+						<div class="field-set-main step-1-fields">
 							<div class="fields-sets">
 								<div class="fields">
 									todo
 								</div>
 							</div>
 
-							<div class="back-and-next place-end">
-								todo
+							<div class="back-and-next place-spaced">
+								<button class="btn gob">Go back</button>
+								<button class="btn nex">Next step</button>
 							</div>
-						</div> -->
+						</div>
 
 						<!-- step 4 -->
 						<!-- <div class="field-set-main step-1-fields">
@@ -248,7 +296,7 @@
 
 				<div class="form-fields">
 
-					<!-- step 1 -->
+					<!- step 1 -->
 					<!-- <div class="field-set-main step-1-fields">
 						<div class="fields-sets">
 							<div class="fields">
