--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -19,26 +15,6 @@
 
 	</head>
 	<body>
-		<!-- <p>
-			<label for="email">Email address:</label>
-			<input
-			  type="text"
-			  name="email"
-			  id="email"
-			  aria-invalid="true"
-			  aria-errormessage="err1" />
-			<span id="err1" class="errormessage" aria-live="polite">Error: Enter a valid email address</span>
-		</p>
-		<p>
-			<label for="email">Email address:</label>
-			<input
-			  type="text"
-			  name="email"
-			  id="email"
-			  aria-invalid="true"
-			  aria-describedby="err1" />
-			<span id="err1" class="errormessage" aria-live="polite">Error: Enter a valid email address</span>
-		</p> -->
 
 		<div class="main-layout">
 			<main class="main">
@@ -412,8 +388,9 @@
 
 			</main>
 			<footer class="footer">
-				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-				Coded by <a href="#">Your Name Here</a>.
+				Challenge <a href="https://www.frontendmentor.io/challenges/multistep-form-YVAnSdqQBJ" target="_blank">Multi-step form</a> 
+				by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+				Coded by <a href="https://github.com/wajidkhan2">wajidkhan2</a>.
 			</footer>
 		</div>
 		<script type="module" src="./static/Vueapp/app.js"></script>
